// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saxly.Parser parse <?xml version="1.0" language="en/US"?>
<root/> 1`] = `
{
  "declaration": {
    "attributes": {
      "language": "en/US",
      "version": "1.0",
    },
    "type": "xml",
  },
  "errors": [],
  "root": {
    "attributes": {},
    "content": [],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root attribute="value">
Text<element key="value" readonly>last name</element></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {
      "attribute": "value",
    },
    "content": [
      "
",
      "Text",
      {
        "attributes": {
          "key": "value",
          "readonly": undefined,
        },
        "content": [
          "last",
          " ",
          "name",
        ],
        "name": "element",
      },
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root attribute="value"></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {
      "attribute": "value",
    },
    "content": [],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root readonly></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {
      "readonly": undefined,
    },
    "content": [],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root/> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root>  first middle last</root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      "
  ",
      "first",
      " ",
      "middle",
      " ",
      "last",
      "
",
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root><nested/></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [],
        "name": "nested",
      },
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root><nested></nested></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [],
        "name": "nested",
      },
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root><nested><inner/></nested></root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [
          {
            "attributes": {},
            "content": [],
            "name": "inner",
          },
        ],
        "name": "nested",
      },
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root>first name</root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      "first",
      " ",
      "name",
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root>first<nested></nested>last</root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      "first",
      {
        "attributes": {},
        "content": [],
        "name": "nested",
      },
      "last",
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root>first<nested>middle</nested>last</root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      "first",
      {
        "attributes": {},
        "content": [
          "middle",
        ],
        "name": "nested",
      },
      "last",
    ],
    "name": "root",
  },
}
`;

exports[`saxly.Parser parse <root>text</root> 1`] = `
{
  "declaration": undefined,
  "errors": [],
  "root": {
    "attributes": {},
    "content": [
      "text",
    ],
    "name": "root",
  },
}
`;
